--- a/flask/samples/notebook/templates/create_note.html
+++ b/flask/samples/notebook/templates/create_note.html
@@ -1,9 +1,11 @@
 <h1>Create Note</h1>
+<!-- HTML表单 -->
 <form action="/notes/create" method="POST">
     <label>Title</label>
     <input type="text" name="title">
-    
+    <br><br>
     <label>Body</label>
     <input type="text" name="body">
+    <br><br>
     <input type="submit" value="Create">
 </form>
